log/build_2024-09-28_12-52-50/go_to_goal/stderr.log
  File "/home/mayo_poyo/ros2_ws2/install/go_to_goal/lib/python3.12/site-packages/go_to_goal/gtg.py", line 20
    goal_x = int sys argv[1]
                 ^^^
SyntaxError: invalid syntax

